--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -83,6 +83,20 @@ min_width=70
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
+# NOTIFICATIONS
+[left]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+[dunst]
+background=#383c45
+command="$HOME"/.config/i3blocks/control --check $BLOCK_NAME
+signal=4
+interval=300
+min_width=20
+[right]
+command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
+interval=once
+
 # TIME
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
@@ -96,9 +110,10 @@ min_width=90
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
 
+
 # POWERMENU
 [arch-logo]
 full_text="<span font='Inconsolata Nerd Font 14' color='#ffffff'>󰣇 </span>"
-command="$HOME"/.config/scripts/tools/powermenu.sh
+command=powermenu
 interval=none
 min_width=20
