--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -114,6 +114,6 @@ interval=once
 # POWERMENU
 [arch-logo]
 full_text="<span font='Inconsolata Nerd Font 14' color='#ffffff'>󰣇 </span>"
-command=powermenu
+command=~/.config/rofi/bin/powermenu
 interval=none
 min_width=20
