--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@
     # rofi
         bindsym $mod+d exec --no-startup-id rofi -show drun
         bindsym $mod+Tab exec --no-startup-id rofi -show combi -modes combi -combi-modes window#ssh
-        bindsym $mod+mod2+KP_Multiply exec --no-startup-id ~/.config/openai/gpt-chatbot-rofi
+        bindsym $mod+mod2+KP_Multiply exec --no-startup-id ~/.config/openai/rofi-gpt
     # volume control
         bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && exec pkill -RTMIN+1 i3blocks
