--- a/i3/config
+++ b/i3/config
@@ -114,6 +114,7 @@
     exec --no-startup-id setxkbmap ie
     exec --no-startup-id redshift &
     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
+    exec --no-startup-id sh -c 'cd ~/.config/openai/ && ./news-gpt' &
 
 # appearance
     # colors
