--- a/i3blocks/i3blocks.conf
+++ b/i3blocks/i3blocks.conf
@@ -87,7 +87,7 @@ interval=once
 [left]
 command=echo "<span font='Inconsolata Nerd Font 21' color='#383c45'></span>"
 interval=once
-[dunst]
+[notifications]
 background=#383c45
 command="$HOME"/.config/i3blocks/control --check $BLOCK_NAME
 signal=4
