--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,7 @@
     # rofi
         bindsym $mod+d exec --no-startup-id rofi -show drun
         bindsym $mod+Tab exec --no-startup-id rofi -show combi -modes combi -combi-modes window#ssh
-        bindsym $mod+mod2+KP_Multiply exec --no-startup-id ~/.config/llm/scripts/utils/rofi
+        bindsym $mod+mod2+KP_Multiply exec --no-startup-id ~/.config/llm/scripts/utils/rofi.py
     # volume control
         bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && exec pkill -RTMIN+1 i3blocks
         bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && exec pkill -RTMIN+1 i3blocks
@@ -114,7 +114,7 @@
     exec --no-startup-id setxkbmap ie
     exec --no-startup-id redshift &
     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
-    #exec --no-startup-id ~/.config/llm/utils/rss-reader &
+    exec --no-startup-id ~/.config/llm/scripts/utils/rss-reader.py --items 10 &
 
 # appearance
     # colors
