--- a/i3/config
+++ b/i3/config
@@ -13,8 +13,8 @@
         set $font           JetBrains Mono Bold 9
         set $title          "> [%title]"
         set $border_px      1
-    # window behaviour
-        set $float_class    Pavucontrol|Gnome-tweaks|Lxappearance
+    # window behavioui3
+        set $float_class    pavucontrol|Gnome-tweaks|Lxappearance
 
 # desktop
     # rofi
@@ -63,10 +63,10 @@
             bindsym $mod+v split v
             bindsym --whole-window $mod+button3 floating toggle
         # resizing
-            bindsym $mod+Ctrl+Up resize grow height 1 px or 1 ppt
-            bindsym $mod+Ctrl+Right resize grow width 1 px or 1 ppt
-            bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
-            bindsym $mod+Ctrl+Left resize shrink width 1 px or 1 ppt
+            bindsym $mod+Ctrl+Up resize grow height 5 px or 5 ppt
+            bindsym $mod+Ctrl+Right resize grow width 5 px or 5 ppt
+            bindsym $mod+Ctrl+Down resize shrink height 5 px or 5 ppt
+            bindsym $mod+Ctrl+Left resize shrink width 5 px or 5 ppt
         # shift window focus
             bindsym $mod+Up focus up
             bindsym $mod+Right focus right
@@ -83,7 +83,7 @@
         set $ws0 "0:<span font='Font Awesome 6 Free Regular 11'></span>"
         set $ws1 "1:<span font='Font Awesome 6 Free Regular 11'></span>"
         set $ws2 "2:<span font='Font Awesome 6 Free Regular 11'></span>"
-        set $ws3 "3:<span font='Font Awesome 6 Free Regular 11'></span>"
+        set $ws9 "9:<span font='Font Awesome 6 Free Regular 11'></span>"
     # keybindings
         # switch to workspace
             bindsym $mod+comma workspace prev
@@ -91,21 +91,22 @@
             bindsym $mod+0 workspace number $ws0
             bindsym $mod+1 workspace number $ws1
             bindsym $mod+2 workspace number $ws2
-            bindsym $mod+3 workspace number $ws3
+            bindsym $mod+9 workspace number $ws3
         # move focused container to workspace
             bindsym $mod+Shift+0 move container to workspace number $ws0
             bindsym $mod+Shift+1 move container to workspace number $ws1
             bindsym $mod+Shift+2 move container to workspace number $ws2
-            bindsym $mod+Shift+3 move container to workspace number $ws3
+            bindsym $mod+Shift+9 move container to workspace number $ws39
 
 # display configuration
     exec_always xrandr --output $monitor --mode $resolution
 
 # application rules
-    for_window [class=KeePass2|Gimp*] move to workspace $ws0
+    #for_window [class=KeePass2|Gimp*] move to workspace $ws0
     for_window [class="Brave-browser"] move to workspace $ws1
     for_window [class="VSCodium"] move to workspace $ws2
     for_window [class="steam"] move to workspace $ws3
+    for_window [class="Godot"] move to workspace $ws2
 
 # autostart
     exec --no-startup-id dunst &
