--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -101,7 +101,6 @@ active-opacity = 0.98
 inactive-dim = 0.1
 
 # Specify a list of conditions of windows that should never be considered focused.
-# focus-exclude = []
 # focus-exclude = [ "class_g = 'Notification-daemon'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -116,7 +115,8 @@ inactive-dim = 0.1
 #
 
 opacity-rule = [ "100:class_g = 'Brave-browser'" ];
-opacity-rule = [ "50:class_g = 'notif-overlay'" ];
+opacity-rule = [ "70:class_g = 'notif-overlay'" ];
+opacity-rule = [ "100:class_g = 'Godot'" ];
 
 #################################
 #           Corners             #
@@ -142,7 +142,7 @@ rounded-corners-exclude = [
 blur-method = "dual_kawase"
 blur-size = 1
 blur-deviation = false
-blur-strength = 2
+blur-strength = 1
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
