--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -59,13 +59,13 @@
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-fading = true
+fading = false
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.03
+fade-in-step = 0.01
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
-fade-out-step = 0.03
+fade-out-step = 0.01
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 # fade-delta = 10
@@ -104,7 +104,7 @@ inactive-dim = 0.1
 # focus-exclude = [ "class_g = 'Notification-daemon'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 1.0
+inactive-dim-fixed = 1.0
 
 # Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
 # like `50:name *= "Firefox"`. picom-trans is recommended over this.
@@ -114,9 +114,11 @@ inactive-dim = 0.1
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 
-opacity-rule = [ "100:class_g = 'Brave-browser'" ];
-opacity-rule = [ "70:class_g = 'notif-overlay'" ];
-opacity-rule = [ "100:class_g = 'Godot'" ];
+opacity-rule = [ 
+    "100:class_g = 'Brave-browser'",
+    "50:class_g = 'notif-overlay'",
+    "100:class_g = 'Godot'"
+];
 
 #################################
 #           Corners             #
@@ -140,9 +142,9 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
-blur-size = 1
+blur-size = 4
 blur-deviation = false
-blur-strength = 1
+blur-strength = 4
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
