--- a/i3/config
+++ b/i3/config
@@ -115,7 +115,7 @@
     exec --no-startup-id setxkbmap ie
     exec --no-startup-id redshift &
     exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ 40%
-    exec --no-startup-id ~/.config/llm/scripts/utils/rss-reader.py --items 10 &
+    #exec --no-startup-id ~/.config/llm/scripts/utils/rss-reader.py --items 10 &
 
 # appearance
     # colors
