--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -117,7 +117,8 @@ inactive-dim-fixed = 1.0
 opacity-rule = [ 
     "100:class_g = 'Brave-browser'",
     "50:class_g = 'notif-overlay'",
-    "100:class_g = 'Godot'"
+    "100:class_g = 'Godot'",
+    "100:class_g = 'trader'",
 ];
 
 #################################
